# bayser

./: .gitignore  CITATION.cff  LICENCE  README.md  pyproject.toml
archive/prototypes/: README.md  model_baseline.py  model_marginalised.py  model_monotone.py  model_outlier.py  mvp1.py
bayser/: calibration.py  classical.py  cli.py  data.py  diagnostics.py  model.py  model_helpers.py  plots.py  posterior.py  results.py  simulation.py  workflow.py
examples/bronze_age_graves/: 14c.csv  14c_reduced.csv  cleaned_features_redux.csv  feature_matrix.csv
