[project]
name = "bayser"
version = "0.1.0"
description = "Bayesian seriation with radiocarbon-informed chronology"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.23.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pymc>=5.28.5",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["bayser"]

[project.scripts]
bayser = "bayser.cli:main"