[project]
name = "bayser"
version = "0.1.0"
description = "Bayesian seriation with optional radiocarbon-informed chronology"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Martin Hinz" },
    { name = "Nils Müller Schessel" },
    { name = "Mirco Brunner" },
    { name = "Sophie C. Schmidt" },
]
license = { text = "MIT" }
keywords = [
    "archaeology",
    "seriation",
    "bayesian-modeling",
    "radiocarbon",
    "chronology",
]

dependencies = [
    "arviz==0.23.4",
    "matplotlib==3.10.9",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pymc==5.28.5",
    "pytensor==2.38.3",
    "scipy==1.17.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/<USER>/bayser"
Repository = "https://github.com/<USER>/bayser"
Issues = "https://github.com/<USER>/bayser/issues"

[project.scripts]
bayser = "bayser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["bayser"]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
